--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
         </style>
     </head>
     <body>
-        <a href="./JEE .docx">JEE RESULTS</a>
+        <a href="./JEE .docx" download>JEE RESULTS</a>
     </body>
 </html>
