--- a/index.html
+++ b/index.html
@@ -2,29 +2,28 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>JEE Results</title>
+        <title>New Mobile Phones</title>
         <style>
             body {
-                background-color: #f0f0f0;
-                font-family: Arial, sans-serif;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100vh;
+                margin: 0;
             }
             a {
-                display: block;
-                width: 200px;
-                margin: 20px auto;
+                font-size: 2rem;
+                background-color: #381515;
                 padding: 10px;
-                text-align: center;
+                border-radius: 5px;
                 text-decoration: none;
                 color: #fff;
-                background-color: #007bff;
-                border-radius: 5px;
-            }
-            a:hover {
-                background-color: #0056b3;
+                margin: 0 1rem;
             }
         </style>
     </head>
     <body>
-        <a href="./JEE .docx">JEE RESULTS</a>
+        <a href="./IPhone16.pdf" download>IPhone 16 Pro max</a>
+        <a href="./SamsungGalaxyS24.pdf" download>Samsung Galaxy S24</a>
     </body>
 </html>
